[gd_scene load_steps=2 format=3 uid="uid://d4jkh4mc0exl6"]

[ext_resource type="Script" uid="uid://6rivk3csi61y" path="res://inventory/widgets/hover_item/hover_item.gd" id="1_omhei"]

[node name="HoverItem" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1
script = ExtResource("1_omhei")

[node name="Image_TextureRect" type="TextureRect" parent="."]
layout_mode = 2

[node name="StackCount" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
text = "0"
horizontal_alignment = 2
vertical_alignment = 2
